--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!doctype html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="./src/Assets/dogs.svg" />
+  <meta name="description" content="Dogs - Rede social para cachorros" />
   <title>Dogs</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
